--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+IN PROGRESS v0.5.6 - SVN
+
+	    Fixes
+	    -----
+
+            - Fixed problem installing configuration files from
+              folders with spaces. 
+            
 2007-01-25  v0.5.5
 
 	    New Features
