--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,28 @@
 IN PROGRESS v0.5.6 - SVN
 
-            Friday February 9th, 2007
+            Saturday February 17th, 2007
         
             New Features
             ------------
 
+	    * New ability to tag patch banks
+
+	      By tagging patch banks, you can change the way Freewheeling
+	      responds depending on which patches you have selected. 
+
+	      For example, I use Freewheeling with a B3 organ soft-synth. 
+	      My organ patches are arranged in a patch bank. I've tagged that
+	      patch bank, and configured Freewheeling to respond differently
+	      when that patchbank is active. So, when I am on an organ patch,
+	      my faders control the B3 drawbars instead of their usual
+	      Freewheeling functions.
+	
+	      You can, of course, change any of Freewheeling's behaviors
+	      depending on the patch bank selected. 
+	
+	      For more info, check the 'SYSTEM_cur_patchbank_tag' variable 
+	      in the configuration.
+	      
             * Receive and transmit MIDI channel pressure (aftertouch) messages
 
             * New 'routethroughpatch' configuration option for MIDI 
