git-svn-id: http://freewheeling.svn.sourceforge.net/svnroot/freewheeling@57 0fdad95a-1c26-0410-b110-fdbcfc9fafa3

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@ IN PROGRESS v0.5.6 - SVN
             
             * Rename snapshots
               
-              Press ALT-1 through ALT-9 to rename the appropriate snapshot.
+              Press ALT-1 through ALT-9 to rename a snapshot.
               Label your song sections for easy recall.
               
             * Way overhauled BCF-2000 interface
