git-svn-id: http://freewheeling.svn.sourceforge.net/svnroot/freewheeling@58 0fdad95a-1c26-0410-b110-fdbcfc9fafa3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 IN PROGRESS v0.5.6 - SVN
 
+            Saturday August 30th, 2008
+
+            Fixes
+            -----
+
+            * Saving over existing snapshots now preserves name
+
+            * Upgrades to BCF-2000 template
+            
             Wednesday August 13th, 2008
             
             New Features
