git-svn-id: http://freewheeling.svn.sourceforge.net/svnroot/freewheeling@68 0fdad95a-1c26-0410-b110-fdbcfc9fafa3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,22 @@
-IN PROGRESS v0.5.6 - SVN
+RELEASE     v0.6
+
+            Friday October 3rd, 2008
+            
+            Folks,
+            
+            Here is a full 0.6 release. 
+            Included are updated Mac and Linux versions. 
+            The new Mac version works with the latest Jack 
+            version and under OS X Leopard. 
+            
+            As you can see from the SVN updates below, 
+            there's quite a bit that's new since 0.5.5.
+            
+            Your feedback is always welcome.
+            
+            -~Mercury
+            
+            v0.5.6 - SVN
 
             Thursday September 4th, 2008
             
