git-svn-id: http://freewheeling.svn.sourceforge.net/svnroot/freewheeling@81 0fdad95a-1c26-0410-b110-fdbcfc9fafa3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 IN PROGRESS v0.6.1 - SVN
 
+            Tuesday January 20th, 2009
+
+            New Features
+            ------------
+
+            * Snapshot moving
+            
+            * Paging through multiple pages of loops with Z/X across interfaces
+
             Sunday December 28th, 2008
 
             New Features
